styles/styles.css
* {
  margin: 0;
}

main {
  background: #f7f7f9;
}

body {
  background: #e5e5e5;
  box-sizing: border-box;
  max-width: 375px;
  max-height: 740px;
}

.navbar-container {
  background: #fff;
  height: 118px;
  max-width: 375px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: space-between;
  padding-left: 24px;
}

.barlists {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  width: 76px;
  height: 20px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  padding: 36px 0 24px;
}

.menu {
  padding-right: 36px;
  width: 18px;
  height: 12px;
  left: 3px;
  top: 6px;
}

.header-container {
  max-width: 375px;
  display: flex;
  flex-direction: column;
  min-height: calc(100vh - 56px);
  background: url("./image/header-shapes\ mobile@2x.png");
  background-color: #fff;
  background-repeat: no-repeat;
  padding: 100px 18px 0 24px;
  border-bottom-left-radius: 70px;
}

.header-main-text,
.about-myself-description {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  padding: 18px 0 8px;
  color: #344563;
}

.about-me {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  width: 260px;
  height: 150px;
  top: 114px;
  letter-spacing: 2px;
  align-items: center;
  color: #172b4d;
  padding-right: 0 150px;
}

.connect {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  max-width: 250px;
}

.iconlists {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 15px 0;
}

.iconlists li {
  list-style: none;
  margin-right: 20px;
}

.card-works-wrapper {
  display: grid;
  grid-template-columns: 1fr;
  margin: 114px 24px 0;
  justify-content: center;
}

.card-works-container {
  width: 245;
  height: 596px;
  background: #fff;
  display: flex;
  flex-direction: column;
  border: 1px solid #dfe1e6;
  border-radius: 16px;
  gap: 12px;
  margin: 0 24px 88px;
  padding: 16px;
}

.card-size1 {
  width: 245;
  height: 552px;
}

.card-size2 {
  width: 245;
  height: 596px;
}

.card-title-text {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  margin: 12px 0;
}

.card-list {
  width: 100%;
  height: 32px;
  display: flex;
  align-items: center;
}

.card-canopy {
  font-family: Poppins, sans-serif;
  font-style: normal;
  line-height: 16px;
  color: #344563;
  font-weight: 600;
  font-size: 13px;
}

.card-canopy-details {
  color: #7a869a;
}

.card-bullet-separator {
  width: 8px;
  height: 8px;
  background: #c1c7d0;
  border-radius: 50%;
  margin: 0 12px;
}

.card-main-text {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  margin: 12px 0;
}

.card-tools-list {
  display: flex;
  margin-right: 16px;
  list-style: none;
  padding-inline-start: 0;
}

.card-tools {
  list-style: none;
  background: #ebebff;
  border-radius: 8px;
  margin-right: 8px;
  padding: 4px 12px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  color: #6070ff;
  letter-spacing: 0.03em;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
}

.card-button-box {
  margin: 12px 0;
}

.card-button {
  background: #fff;
  padding: 12px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: Poppins, sans-serif;
  font-style: normal;
  color: #396de2;
  letter-spacing: 0.03em;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
}

.card-button:hover {
  background: #396de2;
  color: #fff;
  cursor: pointer;
}

.about-myself {
  background: #fff;
  border-top-right-radius: 70px;
  padding: 114px 24px;
  margin-top: 26px;
}

#about-myself-header {
  width: 327px;
  height: 101px;
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.language-header,
.skill-header {
  left: 12px;
  right: 78px;
  top: calc(50% - 24px / 2);
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
}

.language-list {
  padding: 12px 11px 12px 0;
  padding-inline-start: 0;
}

.language {
  background: #f7f7f9;
  border-radius: 8px;
  padding: 10px 12px;
  margin-bottom: 12px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.language-text {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  color: #253858;
  margin-left: 16px;
}

.skill-container {
  display: flex;
  flex-direction: column;
  padding-left: 13px;
  padding-right: 8px;
}

.skill-list-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 24px 0;
  margin-right: 63px;
  cursor: pointer;
}

.skill-header {
  font-family: Poppins, sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  color: #000;
}

.skill-separator {
  height: 1px;
  background: #dfe1e6;
}

.contact-section {
  background-color: #fff;
  max-width: 375px;
  max-height: 779px;
  border: none;
  justify-content: center;
}

.contact-container {
  background-image: url("../images/contact\ form\ shapes-mobile@2x.png");
  background-color: #6070ff;
  background-repeat: no-repeat;
  background-position: top 21px left 153px;
  color: #fff;
  background-size: contain;
  border-top-left-radius: 70px;
}

.contact-title {
  display: flex;
  justify-content: space-between;
  padding: 103px 60px 0;
  font-family: Poppins, sans-serif;
  font-size: 40px;
  font-weight: 700;
  line-height: 52px;
}

.contact-details {
  text-align: center;
  background: #6070ff;
  border-radius: 10px;
  font-family: Poppins, sans-serif;
  font-size: 20px;
  margin-bottom: 10px;
  line-height: 28px;
  padding: 12px 24px 22px;
  color: #ebebff;
}

.contact-form {
  padding: 14px;
  display: flex;
  flex-direction: column;
}

.contact-input {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border: 1px solid #fff;
  border-radius: 8px;
  width: 100%;
  margin: 10px 0;
  font-size: 17px;
  padding: 10px;
  color: #172b4d;
  line-height: 20px;
}

.form-msg {
  border: 1px solid #fff;
  border-radius: 8px;
  min-height: 140px;
  padding: 10px;
  margin: 10px 0;
  color: #b3bac5;
  font-family: Poppins, sans-serif;
  font-style: normal;
  fill: solid;
  line-height: 24px;
  width: 100%;
  font-size: 15px;
}

.submit-button {
  border: 1px solid #fff;
  align-self: flex-start;
  border-radius: 8px;
  margin: 10px 0;
  color: #6070ff;
  font-size: 17px;
  line-height: 24px;
  padding: 12px 16px;
}

